src/styles/article.scss
@use "base";

.article-container *::selection {
  background-color: base.$gray-content;
  color: white;
}

.wip-banner {
  background-color: orange;
  margin-top: -30px;
  margin-inline: -40px !important;
  white-space: nowrap;
  text-overflow: clip;
}

.wip-banner p {
  font-size: 10px;
  color: rgb(201, 87, 0);
  padding-block: 2px;
  padding-inline: 7px;
}

.article-container {
  font-family: "Inter Variable", system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  font-size: 15px;
  padding: 30px 40px 10px 40px;
  min-height: 100dvh;
  height: 100dvh;
  overflow-y: scroll;
  scroll-behavior: smooth;
  background-color: black;
  color: rgb(223, 223, 223);

  a {
    color: rgb(154, 154, 154);
    text-decoration: none;

    &:hover {
      color: rgb(154, 154, 154);
      text-decoration: underline;
    }

    &:visited {
      color: rgb(154, 154, 154);
    }
  }
}

h1,
h2 {
  margin-bottom: 5px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 600;
  line-height: 1.2;
}

h3,
h4,
h5,
h6 {
  margin-bottom: 20px;
}

p,
ul,
li {
  font-weight: 300;
}

.article-container p {
  margin-bottom: 20px;
}

code {
  font-family: "Fragment Mono", monospace;
  font-size: 13px;
  background-color: rgb(37, 37, 37);
  border-radius: 4px;
  padding-block: 2px;
  padding-inline: 4px;
  color: rgb(144, 144, 144);
}

.astro-code {
  padding-inline: 14px;
  padding-block: 8px;
  border-radius: 4px;
}

.astro-code > code {
  padding: 0px;
  background-color: rgb(0, 0, 0, 0) !important;
}

.github-dark {
  background-color: rgb(37, 37, 37) !important;
  border: 1px solid rgb(57, 57, 57);
  margin-bottom: 30px;
}

div [id^="user-content-fnref-"] {
  color: rgb(141, 141, 141);
  font-weight: 500;
}

.footnotes ::marker {
  color: rgb(141, 141, 141);
}

#footnote-label {
  display: none;
}

.data-footnote-backref {
  color: rgb(141, 141, 141) !important;
}

.image-container {
  display: grid;
  align-items: center;
}

.image-container p {
  display: grid;
  gap: 20px;
}

.image-container img {
  width: 100%;
}

.back-button {
  display: none;
}

table {
  border: 1px solid rgb(57, 57, 57);
  border-radius: 3px;
  border-collapse: separate;
  overflow-wrap: break-word;
  border-spacing: 0;
  width: 100%;
  margin-bottom: 30px;
}

table tr:not(:last-child) td,
th {
  border-bottom: 1px solid rgb(57, 57, 57);
}

td:not(:last-child),
th:not(:last-child) {
  border-right: 1px solid rgb(57, 57, 57);
}

td,
th {
  text-align: left;
  font-weight: normal;
  padding: 0.3rem 0.5rem;
}

th:first-of-type {
  background-color: rgb(37, 37, 37);
  border-radius: 2px 0 0 0;
}

th:not(:first-of-type) {
  background-color: rgb(37, 37, 37);
}

th:not(:last-of-type) {
  background-color: rgb(37, 37, 37);
}

th:last-of-type {
  background-color: rgb(37, 37, 37);
  border-radius: 0 2px 0 0;
}

td {
  display: table-cell;
  vertical-align: inherit;
}

blockquote {
  background: rgb(37, 37, 37) !important;
  border-left: 5px solid #4e4e4e;
  margin: 20px 0px 20px 20px;
  padding-block: 15px;
  padding-inline: 20px;
  quotes: "\201C""\201D""\2018""\2019";

  p {
    margin-bottom: 0px !important;
  }
}

hr {
  border: 0.5px solid #4e4e4e;
}

iframe {
  margin-bottom: 20px;
  border-radius: 8px;
}

@media screen and (max-width: 864px) {
  #sidebar {
    display: none;
  }

  .article-container {
    padding: 15px 15px 5px 15px;
    height: auto;
    min-height: auto;
  }

  .back-button {
    display: block;
    position: fixed;
    right: 15px;
    top: 15px;
  }

  .back-button p {
    font-family: "Inter Variable", system-ui, -apple-system, BlinkMacSystemFont,
      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
      "Helvetica Neue", sans-serif;
    color: rgb(223, 223, 223);
    background-color: rgb(0, 0, 0, 0.6);
    padding-left: 10px;
    padding-right: 10px;
    padding-block: 5px;
  }

  .wip-banner {
    background-color: orange;
    margin-top: -15px;
    margin-inline: -15px !important;
    margin-bottom: -10px;
    white-space: nowrap;
    text-overflow: clip;
  }
  
  .wip-banner p {
    font-size: 10px;
    color: rgb(201, 87, 0);
    padding-block: 2px;
    padding-inline: 7px;
  }
  
}

